--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>     
-    <h1>PICK COLOR MIGUEL GÓMEZ Y SERGIO ARAGÓN</h1>
+    <h1>PICK COLOR MIGUEL GÓMEZ</h1>
     <p>
     <table>
         <th>RGB</th><th>VALOR</th>
